projects/examples/source/02.30.cpp
//////////////////////////////////////////////////////////////

// chapter : Basics of Programming

//////////////////////////////////////////////////////////////

// section : Memory Management

//////////////////////////////////////////////////////////////

// content : Heap Segment
//
// content : Dynamic Objects
//
// content : Operators new and delete
//
// content : Dynamic Arrays
//
// content : Operators new[] and delete[]
//
// content : Memory Leaks

//////////////////////////////////////////////////////////////

#include <cassert>
#include <type_traits>

//////////////////////////////////////////////////////////////

int main()
{
	auto x = new auto(1);

//  ----------------------------------------------------------

	assert(*x == 1);

//  ----------------------------------------------------------
	
	delete x;
	
//  ----------------------------------------------------------

	auto array = new int[5]{ 1, 2, 3, 4, 5 };

//  ----------------------------------------------------------

	static_assert(std::is_same_v < decltype(array), int * > );

//  ----------------------------------------------------------

	assert(array[0] == 1);

//  ----------------------------------------------------------

	delete[] array;

//  ----------------------------------------------------------

//	delete array; // error
}

//////////////////////////////////////////////////////////////